--- a/src/support/fixtures/config.yml
+++ b/src/support/fixtures/config.yml
@@ -4,3 +4,4 @@ application:
   bugereats_QA: "https://buger-eats.vercel.app/" 
   sauceDemo: "https://www.saucedemo.com/"
   lojinha: "https://5elementslearning.dev/demosite/index.php"
+  linkedin: "https://www.linkedin.com/"
